apps/homepage/homepage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-internal
  namespace: monitoring
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - home.${LOCAL_DOMAIN}
      secretName: wildcard-local-tls
  rules:
    - host: home.${LOCAL_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-external
  namespace: monitoring
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-authentik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: home.${PUBLIC_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
